# turbostar2

./: .clang-format  .gitignore  .gitmodules  GEMINI.md  README.md  agent_chat_2.json  debug_log.txt  format_tmp.cpp  leak_test.py  lines.txt.org  meson.build  meson_options.txt  out.txt  perf.data  perf.data.old  review-cr.md  review-document.md  review-highlight.md  review.md  test_ansi.py  test_args.json  test_format.cpp  test_out.txt  valgrind.xml  verify_layout.sh
src/: EventLogger.cpp  EventLogger.hpp  agent_window.cpp  agent_window.h  ansi.cpp  ansi.h  binary_document.cpp  binary_document.h  build_error_manager.cpp  build_error_manager.h  build_log_parser.h  clangd_manager.cpp  clangd_manager.h  command_runner.cpp  command_runner.h  config_manager.cpp  config_manager.h  coredump_manager.cpp  coredump_manager.h  cpp_highlighter.cpp  cpp_highlighter.h  crash_handler.cpp  crash_handler.h  crashdump_manager.cpp  crashdump_manager.h  dialog.cpp  dialog.h  document.cpp  document.h  document_edit.cpp  document_format.cpp  document_highlight.cpp  document_nav.cpp  document_search.cpp  document_selection.cpp  document_undo.cpp  editor.cpp  editor.h  editor_events.cpp  editor_events_build.cpp  (+57 more)
src/agentcli/: main.cpp
src/agentlib/: agent_interaction.cpp  agent_interaction.h  ai_agent.cpp  ai_agent.h  ai_model.cpp  ai_model.h  api_formatter.cpp  api_formatter.h  compaction_engine.cpp  compaction_engine.h  context_dnn.cpp  context_dnn.h  copilot_manager.cpp  copilot_manager.h  document_provider.h  file_security_manager.cpp  file_security_manager.h  httplib_transport.cpp  httplib_transport.h  llm_client.cpp  llm_client.h  llm_tool.h  llm_tool_action.h  llm_transport.h  llm_types.h  recording_transport.cpp  recording_transport.h  replay_transport.cpp  replay_transport.h  single_file_tool_validator.h  single_string_tool_validator.h  skill_manager.cpp  skill_manager.h  tool_context.h  tool_family.h  tool_registry.cpp  tool_registry.h  tool_validator.h  virtual_file_system.cpp  virtual_file_system.h  (+1 more)
src/agentlib/interactions/: action.cpp  action.h  agent_theme.h  base.cpp  base.h  interactions.h  llm_response.cpp  llm_response.h  reasoning.cpp  reasoning.h  system_message.cpp  system_message.h  terminal.cpp  terminal.h  tool_interaction.cpp  tool_interaction.h  user_message.cpp  user_message.h
src/crash_catcher/: crash_catcher.c  crash_catcher.h
src/mcp/: mcp_manager.cpp  mcp_manager.h  mcp_server.cpp  mcp_server.h
src/pch/: pch.h
src/tools/: meson.build  output_filter.h  terminal_command_runner.h  troff2md.cpp  troff2md.h
src/tools/activate_skill/: activate_skill.h  activate_skill_entry.cpp  activate_skill_security.cpp
src/tools/activate_tool_family/: activate_tool_family.h  activate_tool_family_entry.cpp  activate_tool_family_security.cpp
src/tools/agent_add_todo/: agent_add_todo.h  agent_add_todo_entry.cpp  agent_add_todo_security.cpp
src/tools/agent_complete_todo/: agent_complete_todo.h  agent_complete_todo_entry.cpp  agent_complete_todo_security.cpp
src/tools/agent_compress_history/: agent_compress_history.h  agent_compress_history_entry.cpp  agent_compress_history_security.cpp
src/tools/agent_create/: agent_create.h  agent_create_entry.cpp  agent_create_security.cpp
src/tools/agent_delete_todo/: agent_delete_todo.h  agent_delete_todo_entry.cpp  agent_delete_todo_security.cpp
src/tools/agent_end/: agent_end.h  agent_end_entry.cpp  agent_end_security.cpp
src/tools/agent_get_output/: agent_get_output.h  agent_get_output_entry.cpp  agent_get_output_security.cpp
src/tools/agent_get_run_screenshot/: agent_get_run_screenshot.h  agent_get_run_screenshot_entry.cpp  agent_get_run_screenshot_security.cpp
src/tools/agent_list/: agent_list.h  agent_list_entry.cpp  agent_list_security.cpp
src/tools/agent_list_episodes/: agent_list_episodes.h  agent_list_episodes_entry.cpp  agent_list_episodes_security.cpp
src/tools/agent_list_todos/: agent_list_todos.h  agent_list_todos_entry.cpp  agent_list_todos_security.cpp
src/tools/agent_mark_episode/: agent_mark_episode.h  agent_mark_episode_entry.cpp  agent_mark_episode_security.cpp
src/tools/agent_mark_milestone/: agent_mark_milestone.h  agent_mark_milestone_entry.cpp  agent_mark_milestone_security.cpp
src/tools/agent_pop_todo/: agent_pop_todo.h  agent_pop_todo_entry.cpp  agent_pop_todo_security.cpp
src/tools/agent_report_final_result/: agent_report_final_result.h  agent_report_final_result_entry.cpp  agent_report_final_result_security.cpp
src/tools/agent_restore_context/: agent_restore_context.h  agent_restore_context_entry.cpp  agent_restore_context_security.cpp
src/tools/agent_set_application_binary/: agent_set_application_binary.h  agent_set_application_binary_entry.cpp  agent_set_application_binary_security.cpp
src/tools/agent_set_status/: agent_set_status.h  agent_set_status_entry.cpp  agent_set_status_security.cpp
src/tools/agent_set_timer/: agent_set_timer.h  agent_set_timer_entry.cpp  agent_set_timer_security.cpp
src/tools/agent_start_app/: agent_start_app.h  agent_start_app_entry.cpp  agent_start_app_security.cpp
src/tools/agent_status/: agent_status.h  agent_status_entry.cpp  agent_status_security.cpp
src/tools/agent_terminate_run/: agent_terminate_run.h  agent_terminate_run_entry.cpp  agent_terminate_run_security.cpp
src/tools/agent_todo_status/: agent_todo_status.h  agent_todo_status_entry.cpp  (+1 more)
src/ui/: agent_status_window.cpp  agent_status_window.h  agent_window.cpp  agent_window.h  ansi_terminal_emulator.cpp  ansi_terminal_emulator.h  coredump_window.cpp  coredump_window.h  crashdump_window.cpp  crashdump_window.h  dialog.cpp  dialog.h  dialog_factories.cpp  dialog_factories.h  diff_window.cpp  diff_window.h  file_dialog.cpp  file_dialog.h  find_dialog.cpp  find_dialog.h  hex_editor_window.cpp  hex_editor_window.h  hex_highlighter.cpp  hex_highlighter.h  menu_bar.cpp  menu_bar.h  popup_menu.cpp  popup_menu.h  settings_dialog.cpp  settings_dialog.h  status_bar.cpp  status_bar.h  terminal_window.cpp  terminal_window.h  ui_element.cpp  ui_element.h  window.cpp  window.h
(+515 files in other folders)
