turbostar_sources = files(
  'main.cpp',
  'event_logger.cpp',
  'ui/menu_bar.cpp',
  'ui/status_bar.cpp',
  'event_queue.cpp',
  'editor.cpp',
  'editor_events.cpp',
  'editor_events_mouse.cpp',
  'editor_events_ui.cpp',
  'editor_events_file.cpp',
  'editor_events_window.cpp',
  'editor_events_search.cpp',
  'editor_events_git.cpp',
  'editor_events_build.cpp',
  'editor_events_lsp.cpp',
  'editor_events_key.cpp',
  'ui/window.cpp',
  'ui/agent_window.cpp',
  'ui/ui_element.cpp',
  'line.cpp',
  'document.cpp',
  'document_nav.cpp',
  'document_undo.cpp',
  'document_selection.cpp',
  'document_edit.cpp',
  'document_search.cpp',
  'document_format.cpp',
  'document_highlight.cpp',
  'ui/dialog.cpp',
  'ui/popup_menu.cpp',
  'history_manager.cpp',
  'config_manager.cpp',
  'command_runner.cpp',
  'git_manager.cpp',
  'cpp_highlighter.cpp',
  'python_highlighter.cpp',
  'markdown_highlighter.cpp',
  'highlighter_registry.cpp',
  'lsp_manager.cpp',
  'process_runner.cpp',
  'gcc_log_parser.cpp',
  'build_error_manager.cpp',
  'fs_utils.cpp',
  'agentlib/ai_agent.cpp',
  'agentlib/llm_client.cpp',
  'agentlib/tool_registry.cpp',
  'agentlib/httplib_transport.cpp',
  'agentlib/recording_transport.cpp',
  'agentlib/replay_transport.cpp',
  'agentlib/file_security_manager.cpp',
  'agentlib/virtual_file_system.cpp',
  'agentlib/skill_manager.cpp'
)

embed_prog = find_program('python3')
help_text_h = custom_target('help_text.h',
  input : '../docs/keybindings.md',
  output : 'help_text.h',
  command : [embed_prog, join_paths(meson.project_source_root(), 'scripts/embed_text.py'), '@INPUT@', '@OUTPUT@', 'help_text_md']
)

turbostar_sources += help_text_h

