tools_sources = files(
  'get_temperature/get_temperature_entry.cpp',
  'get_temperature/get_temperature_security.cpp',
  'fs_file_size/fs_file_size_entry.cpp',
  'fs_file_size/fs_file_size_security.cpp',
  'fs_list_dir/fs_list_dir_entry.cpp',
  'fs_list_dir/fs_list_dir_security.cpp',
  'fs_read_lines/fs_read_lines_entry.cpp',
  'fs_read_lines/fs_read_lines_security.cpp',
  'fs_regexp_lines/fs_regexp_lines_entry.cpp',
  'fs_regexp_lines/fs_regexp_lines_security.cpp',
  'fs_compile_info/fs_compile_info_entry.cpp',
  'fs_compile_info/fs_compile_info_security.cpp',
  'fs_compile_summary/fs_compile_summary_entry.cpp',
  'fs_compile_summary/fs_compile_summary_security.cpp'
)
