tools_sources = files(
  'sqlite_create_db/sqlite_create_db_entry.cpp',
  'sqlite_create_db/sqlite_create_db_security.cpp',
  'sqlite_delete_db/sqlite_delete_db_entry.cpp',
  'sqlite_delete_db/sqlite_delete_db_security.cpp',
  'sqlite_list_db/sqlite_list_db_entry.cpp',
  'sqlite_list_db/sqlite_list_db_security.cpp',
  'sqlite_perform/sqlite_perform_entry.cpp',
  'sqlite_perform/sqlite_perform_security.cpp',
  'agent_add_todo/agent_add_todo_entry.cpp',
  'agent_add_todo/agent_add_todo_security.cpp',
  'agent_list_todos/agent_list_todos_entry.cpp',
  'agent_list_todos/agent_list_todos_security.cpp',
  'agent_complete_todo/agent_complete_todo_entry.cpp',
  'agent_complete_todo/agent_complete_todo_security.cpp',
  'agent_delete_todo/agent_delete_todo_entry.cpp',
  'agent_delete_todo/agent_delete_todo_security.cpp',
  'get_temperature/get_temperature_entry.cpp',
  'get_temperature/get_temperature_security.cpp',
  'fs_file_size/fs_file_size_entry.cpp',
  'fs_file_size/fs_file_size_security.cpp',
  'fs_list_dir/fs_list_dir_entry.cpp',
  'fs_list_dir/fs_list_dir_security.cpp',
  'fs_read_lines/fs_read_lines_entry.cpp',
  'fs_read_lines/fs_read_lines_security.cpp',
  'fs_read_binary/fs_read_binary_entry.cpp',
  'fs_read_binary/fs_read_binary_security.cpp',
  'ask_user/ask_user_entry.cpp',
  'ask_user/ask_user_security.cpp',
  'activate_skill/activate_skill_entry.cpp',
  'activate_skill/activate_skill_security.cpp',
  'list_skills/list_skills_entry.cpp',
  'list_skills/list_skills_security.cpp',
  'get_current_datetime/get_current_datetime_entry.cpp',
  'get_current_datetime/get_current_datetime_security.cpp',
  'fs_regexp_lines/fs_regexp_lines_entry.cpp',
  'fs_regexp_lines/fs_regexp_lines_security.cpp',
  'fs_compile_info/fs_compile_info_entry.cpp',
  'fs_compile_info/fs_compile_info_security.cpp',
  'fs_compile_summary/fs_compile_summary_entry.cpp',
  'fs_compile_summary/fs_compile_summary_security.cpp',
  'fs_compile_file/fs_compile_file_entry.cpp',
  'fs_compile_file/fs_compile_file_security.cpp',
  'fs_compile_project/fs_compile_project_entry.cpp',
  'fs_compile_project/fs_compile_project_security.cpp',
  'fs_write_file/fs_write_file_entry.cpp',
  'fs_write_file/fs_write_file_security.cpp',
  'fs_replace_lines/fs_replace_lines_entry.cpp',
  'fs_replace_lines/fs_replace_lines_security.cpp',
  'flag_as_error/flag_as_error_entry.cpp',
  'flag_as_error/flag_as_error_security.cpp',
  'clear_all_errors/clear_all_errors_entry.cpp',
  'clear_all_errors/clear_all_errors_security.cpp'
)
